add name to jira-ocean.yml file

--- a/workflows/jira-ocean.yml
+++ b/workflows/jira-ocean.yml
@@ -4,6 +4,7 @@
 # atlassian_user_email: The email of the user used to query Jira
 # atlassian_user_token: You can configure the user token on the <a target="_blank" href="https://id.atlassian.com/manage-profile/security/api-tokens">Atlassian account page</a>
 
+name: Port Ocean Jira Integration
 on:
   workflow_dispatch:
   schedule:
