--- a/.github/workflows/jira-ocean.yml
+++ b/.github/workflows/jira-ocean.yml
@@ -3,7 +3,7 @@ name: Port Ocean Jira Integration
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 */1 * * *'
+    - cron: "0 */1 * * *"
 
 jobs:
   run-integration:
@@ -18,5 +18,5 @@ jobs:
           port_base_url: "https://api.port.io"
           config: |
             jira_host: ${{ secrets.JIRA_HOST }}
-            atlassian_user_email: ${{ secrets.ATLASSIANUSEREMAIL }}
+            atlassian_user_email: ${{ secrets.ATLASSIAN_USER_EMAIL }}
             atlassian_user_token: ${{ secrets.ATLASSIAN_USER_TOKEN }}
